--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title></title> FAHLON'S Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
+  <!-- Navbar -->
+  <header>
+    <h1 class="logo">Portfolio</h1>
+    <nav>
+      <a href="#home">Home</a>
+      <a href="#about">About</a
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <!-- Hero Section -->
+  <section id="home" class="hero">
+    <h2>Hi, I'm <span>FAHLON WHITE</span></h2>
+    <p>The home of the original money dance.</p>
+    <button onclick="scrollToContact()">Text Me</button>
+  </section>
+
+  <!-- About Section -->
+  <section id="about" class="section">
+    <h2>About Me</h2>
+    <p>
+      Contact us to get started with your application for the prize winnings
+    </p>
+  </section>
+
+  
+
+  <!-- Contact Section -->
+  <section id="contact" class="section">
+    <h2>Contact Me</h2>
+    <p>Email: yourname@email.com</p>
+    <p>Phone: +15342418049</p>
+  </section>
+
+  <footer>
+    <p>© 2025 FAHLON WHITE. All rights reserved.</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+                                     </html>
